# cookiecutter-fastbots

./: Dockerfile  README.md  cookiecutter.json  main.py  pyproject.toml  run.bat  run.sh
app/: main.py
app/pages/: product_page.py  search_page.py
app/tasks/: test_task.py
pages/: product_page.py
tasks/: test_task.py
{{cookiecutter.project_name}}/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  run.bat  settings.ini
{{cookiecutter.project_name}}/core/: config.py
{{cookiecutter.project_name}}/pages/: product_page.py  search_page.py
{{cookiecutter.project_name}}/scripts/: debug.bat  debug.sh  run.sh
{{cookiecutter.project_name}}/tasks/: test_task.py
